helmfile/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer-grafana
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer-alertman
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: alertmanager
  ports:
    - protocol: TCP
      port: 9093
      targetPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer-prom
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
